# birdshot

./: .gitignore  .~lock.results.xlsx#  package.json  pyproject.toml  requirements.txt  results.xlsx
birdshot/analysis/: engine.py  filter.py  markers.py  models.py  results.py
birdshot/chart/: plot.py
birdshot/io/: files.py  load.py  normal.py  output.py  training.py  utils.py
birdshot/utils/: st_chart.py
log/: error.txt
models/: GRU_4l_16h.pt  normal_results.pickle  svr_a.pkl  svr_b.pkl  svr_i.pkl
notebooks/: .~lock.result.xlsx#  extract_features.ipynb  result.xlsx  test.ipynb  test_data.ipynb
ui/: src.py  st_chart.py  st_charts_progress.py
