[tool.poetry]
name = "birdshot"
version = "0.1.0"
description = ""
authors = ["ClementPla <clement.playout@polymtl.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.43.2"
plotly = "6.0.1"                   
pandas = "2.2.3"
scipy = "1.15.2"
numpy = "2.2.4"
matplotlib = "3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
